replaced home page.

--- a/public/pages/designer.html
+++ b/public/pages/designer.html
@@ -1,5 +1,5 @@
 <section id='content'>
-  <div class='container'>
+  <div class='container full-screen'>
     <br /><br />    
     <iframe  width="100%" ng-src="{{redFrame}}" marginheight="0" frameborder="0" height="100px" id="designerFrame"></iframe>    
   </div>
