--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <!-- META -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <meta content="text/html;charset=utf-8" http-equiv="content-type">
-    <meta content="Meshines" name="description">
+    <meta name="description" content="Octoblu - Internet of Everything!">
+    <meta name="author" content="Octoblu">
     <link href="assets/images/meta_icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="assets/images/meta_icons/apple-touch-icon.png" rel="apple-touch-icon-precomposed">
     <link href="assets/images/meta_icons/apple-touch-icon-57x57.png" rel="apple-touch-icon-precomposed" sizes="57x57">
@@ -16,36 +17,42 @@
     <link href="assets/images/meta_icons/apple-touch-icon-114x114.png" rel="apple-touch-icon-precomposed" sizes="114x114">
     <link href="assets/images/meta_icons/apple-touch-icon-144x144.png" rel="apple-touch-icon-precomposed" sizes="144x144">
 
-    <title>Octoblu</title>
+    <title>Octoblu - Internet of Everything!</title>
 
     <!-- SCROLLS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
     <!-- <link href="assets/stylesheets/bootstrap.min.css" rel="stylesheet" media="screen"> -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,300,400,700' rel='stylesheet' type='text/css'>
+
     <link href="assets/stylesheets/light-theme.css" media="all" id="color-settings-body-color" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/theme-colors.css" media="all" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/bootstrap-switch/bootstrap-switch.css" media="all" rel="stylesheet" type="text/css" />
+
     <link href="assets/stylesheets/demo.css" media="all" rel="stylesheet" type="text/css" />
+
+<!--     
     <link href="assets/stylesheets/erosIntro.css" rel="stylesheet" media="screen">
-    <link href="assets/stylesheets/style.css" rel="stylesheet" media="screen">
-    <link href="assets/stylesheets/custom.css" rel="stylesheet">
+    <link href="assets/stylesheets/athenaSlide.css" rel="stylesheet">   
+ --> 
+    <!-- <link href="assets/stylesheets/style.css" rel="stylesheet" media="screen"> -->
+    <!-- <link href="assets/stylesheets/custom.css" rel="stylesheet"> -->
     <link href="assets/stylesheets/animation.css" rel="stylesheet">
     <link href="assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
-    <link href="assets/stylesheets/athenaSlide.css" rel="stylesheet">
     <link href="assets/javascripts/nvd3/nv.d3.min.css" rel="stylesheet">
     <link href="assets/javascripts/owl.carousel/owl.carousel.css" rel="stylesheet">
     <link href="assets/javascripts/owl.carousel/owl.theme.css" rel="stylesheet">
-    <!--   <link rel="shortcut icon" href="images/favicon.png"> -->
 
-    <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">    
+    <link href="/assets/stylesheets/main.css" rel="stylesheet">
+    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 
     <script src="assets/javascripts/skynet.js"></script>
 
     <style type="text/css">
         .reveal-animation.ng-enter {
-            -webkit-animation: enter_sequence 1s linear; /* Safari/Chrome */
-            animation: enter_sequence 1s linear; /* IE10+ and Future Browsers */
+            -webkit-animation: enter_sequence 1s linear; 
+            animation: enter_sequence 1s linear; 
         }
         @-webkit-keyframes enter_sequence {
             from { opacity:0; }
@@ -56,19 +63,53 @@
             to { opacity:1; }
         }
         @media (min-width: 1200px) {
-            .container {
+            .full-screen {
                 width: 100%;
             }
         }
     </style>
 </head>
 <body class="contrast-sea-blue" ng-app="octobluApp">
-    <header>
+
+    <!-- NAVBAR -->
+    <div class="navbar navbar-fixed-top" ng-hide="authorization.isAuthenticated">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav2">
+                    <span class="sr-only">Menu</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <div id="brand">
+                <a href="#top" class="navbar-brand">
+                    <img src="assets/images/octoblu.png" alt="Octoblu Logo" />
+                    <h1 class="hide">Parallax HTML One-Page Template</h1>
+                </a>
+                </div>
+            </div>
+            <nav class="navbar-collapse collapse" id="main-nav2" role="navigation">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="#top">HOME</a></li>
+                    <li><a href="#about">ABOUT US</a></li>
+                    <li><a href="#services">SERVICES</a></li>
+                    <li><a href="#works">OUR WORKS</a></li>
+                    <li><a href="#team">TEAM</a></li>
+                    <li><a href="#contact">CONTACT US</a></li>
+                    <!-- <li><a href="/login">SIGN UP</a></li> -->
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <!-- END NAVBAR -->
+
+
+    <header ng-show="authorization.isAuthenticated">
         <nav class="navbar navbar-default navbar-fixed-top">
             <a class="navbar-brand" href="" ui-sref="home">
                 <img src="/assets/images/octoblu.png" height="50px"/>
             </a>
-            <a class="toggle-nav btn pull-left" href="" ng-show="authorization.isAuthenticated">
+            <a class="toggle-nav btn pull-left" href="">
                 <i class="icon-reorder"></i>
             </a>
             <ul class="nav" ng-show="authorization.isAuthenticated">
@@ -186,7 +227,7 @@
     <footer></footer>
 
     <!-- build:js scripts/plugins.js -->
-    <script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-2.1.0.min.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js" type="text/javascript"></script>
     <script src="assets/javascripts/plugins/jquery_ui_touch_punch/jquery.ui.touch-punch.min.js" type="text/javascript"></script>
@@ -199,15 +240,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-resource.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="assets/javascripts/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
-    <script src="assets/javascripts/athenaSlide.js"></script>
-    <script src="assets/javascripts/underscore.js"></script>
-    <script src="assets/javascripts/d3/d3.min.js"></script>
-    <script src="assets/javascripts/nvd3/nv.d3.min.js"></script>
-    <script src="assets/javascripts/owl.carousel/owl.carousel.min.js"></script>
 
     <!-- endbuild -->
 
     <!-- build:js scripts/modules.js -->
+    <script src="assets/javascripts/underscore.js"></script>
+
     <script src="assets/javascripts/angular-ui-router.min.js"></script>
     <script src="assets/javascripts/angular-ui-utils/ui-utils.min.js"></script>
     <script src="assets/javascripts/angular-google-analytics.js"></script>
@@ -219,12 +257,30 @@
     <script src="assets/javascripts/plugins/validate/additional-methods.js" type="text/javascript"></script>
     <script src="assets/javascripts/jsoneditor/jsoneditor.js" type="text/javascript"></script>
     <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
-    <script src="assets/javascripts/isotope.js"></script>
-    <script src="assets/javascripts/skroller.js"></script>
+    <!-- // <script src="assets/javascripts/isotope.js"></script> -->
+    <!-- // <script src="assets/javascripts/skroller.js"></script> -->
     <script src="assets/javascripts/elastic.min.js"></script>
     <script src="assets/javascripts/elasticsearch.angular.js"></script>
     <script src="assets/javascripts/angular-dragdrop.min.js"></script>
     <script src="assets/javascripts/smoothie.js"></script>
+
+  	<!-- // <script src="assets/javascripts/jquery-2.1.0.min.js"></script> -->
+  	<!-- // <script src="assets/javascripts/bootstrap.min.js"></script> -->
+
+  	<script src="assets/javascripts/jquery.scrollTo-1.4.3.1-min.js"></script>
+  	<script src="assets/javascripts/jquery.localscroll-1.2.7-min.js"></script>
+  	<script src="assets/javascripts/jquery.easing.min.js"></script>
+  	<script src="assets/javascripts/jquery.parallax-1.1.3.js"></script>
+  	<script src="assets/javascripts/google-map.js"></script>
+  	<script src="assets/javascripts/twitter-fetcher.js"></script>
+  	<script src="assets/javascripts/imagesloaded.pkgd.js"></script>
+  	<script src="assets/javascripts/jquery.isotope.js"></script>
+  	<script src="assets/javascripts/jquery.flexslider-min.js"></script>
+  	<script src="assets/javascripts/jpreloader.min.js"></script>
+  	<script src="assets/javascripts/jquery.videoBG.custom.js"></script>
+  	<script src="assets/javascripts/jquery.magnific-popup.min.js"></script>
+    <script src="assets/javascripts/wow.js"></script>
+  	<script src="assets/javascripts/loop.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
