--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -82,7 +82,7 @@
 </style>
 
 <section id="content">
-    <div class="container">
+    <div class="container full-screen">
         <div class="row" id="content-wrapper">
             <div class="col-xs-12">
                 <div class='page-header'>
