--- a/public/pages/connector.html
+++ b/public/pages/connector.html
@@ -1,5 +1,5 @@
 <section id='content'>
-  <div class='container'>
+  <div class='container full-screen'>
     <div class='row' id='content-wrapper'>
       <div class='col-xs-12'>
         
