--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -11,7 +11,7 @@
 </style>
 
 <section id="content">
-    <div class="container">
+    <div class="container full-screen">
         <div class="row" id="content-wrapper">
             <div class="col-xs-12">
                 <div class="page-header page-header-with-buttons">
