CRUD for permission working!

--- a/public/pages/admin/groups/detail.html
+++ b/public/pages/admin/groups/detail.html
@@ -65,9 +65,9 @@
                 <span class="permission-title">Discover</span>
 
                 <div class="pull-right btn-group">
-                    <input type="button" class="btn btn-default" ng-model="resourcePermission.permission.discover"
+                    <input type="button" class="btn btn-default" ng-model="resourcePermission.permissions.discover"
                            btn-radio=true value="YES">
-                    <input type="button" class="btn btn-default" ng-model="resourcePermission.permission.discover"
+                    <input type="button" class="btn btn-default" ng-model="resourcePermission.permissions.discover"
                            btn-radio=false value="NO">
                 </div>
             </li>
@@ -79,9 +79,9 @@
                 <span class="permission-title">Configure</span>
 
                 <div class="pull-right btn-group">
-                    <input type="button" class="btn btn-default" ng-model="resourcePermission.permission.configure"
+                    <input type="button" class="btn btn-default" ng-model="resourcePermission.permissions.configure"
                            btn-radio=true value="YES">
-                    <input type="button" class="btn btn-default" ng-model="resourcePermission.permission.configure"
+                    <input type="button" class="btn btn-default" ng-model="resourcePermission.permissions.configure"
                            btn-radio=false value="NO">
                 </div>
             </li>
@@ -95,9 +95,9 @@
                 <div class="pull-right">
                     <div class="pull-right btn-group">
                         <input type="button" class="btn btn-default"
-                               ng-model="resourcePermission.permission.message_receive" btn-radio=true value="YES">
+                               ng-model="resourcePermission.permissions.message_receive" btn-radio=true value="YES">
                         <input type="button" class="btn btn-default"
-                               ng-model="resourcePermission.permission.message_receive" btn-radio=false value="NO">
+                               ng-model="resourcePermission.permissions.message_receive" btn-radio=false value="NO">
                     </div>
                 </div>
             </li>
@@ -111,9 +111,9 @@
                 <div class="pull-right">
                     <div class="pull-right btn-group">
                         <input type="button" class="btn btn-default"
-                               ng-model="resourcePermission.permission.message_send" btn-radio=true value="YES">
+                               ng-model="resourcePermission.permissions.message_send" btn-radio=true value="YES">
                         <input type="button" class="btn btn-default"
-                               ng-model="resourcePermission.permission.message_send" btn-radio=false value="NO">
+                               ng-model="resourcePermission.permissions.message_send" btn-radio=false value="NO">
                     </div>
                 </div>
             </li>
