--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -143,11 +143,11 @@
                                 <li>{{controller}}</li>
                                 <li>
                                     <i class="fa fa-user" style="margin-right: 10px;"></i>People <span
-                                        class="label label-info pull-right">{{(group.members | filter: {'type': 'device'}).length }}</span>
+                                        class="label label-info pull-right">{{(group.members | filter: {'type': 'user'}).length }}</span>
                                 </li>
                                 <li>
                                     <i class="fa fa-hdd-o" style="margin-right: 10px;"></i>Devices<span
-                                        class="label label-success pull-right">{{(group.members | filter: {'type': 'user'}).length }}</span>
+                                        class="label label-success pull-right">{{(group.members | filter: {'type': 'device'}).length }}</span>
                                 </li>
                             </ul>
                         </div>
