--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -74,8 +74,9 @@
         margin-bottom: 0px;
         padding-left: 0px;
     }
-
-
+    .resource-icon {
+        font-size:1.5em;
+    }
     .resource-panel .panel-footer ul.dropdownmenu {
 
     }
