reset the invitations field after sending an invitation

--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -92,8 +92,7 @@
                     <h1 class="col-xs-12 col-sm-12 col-md-11 col-lg-11" style="margin-top: 25px;">
                         <i class='fa fa-lock'></i>
                         <span>Admin</span>
-                        <form class="form-inline pull-right" role="form" ng-controller="invitationController"
-                              style="margin-top: 0px;">
+                        <form class="form-inline pull-right" role="form" ng-controller="invitationController" style="margin-top: 0px;">
                             <div class="form-group">
                                 <label class="sr-only" for="recipientEmail">Email address</label>
                                 <input type="email" class="form-control" id="recipientEmail" ng-model="recipientEmail"
