resourcePermission-based grouping. List page works, working on detail page.

--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -60,7 +60,6 @@
 
     .group-summary-panel-heading  a.bg-primary:hover,
     {
-        cursor: hand !important;
         text-decoration: underline !important;
         background-color: #428bca !important;
         color: #ffffff !important;
@@ -124,7 +123,7 @@
                         </form>
                     </div>
                     <h3 class="text-center text-muted col-xs-12 col-sm-12 col-md-12 col-lg-12">Groups</h3>
-                    <div data-ng-repeat="resourcePermission in groupResourcePermissions | orderBy:'name'"
+                    <div data-ng-repeat="resourcePermission in allGroupResourcePermissions | orderBy:'name'"
                          class="panel panel-primary col-xs-12 col-sm-12 col-md-2 col-lg-2 group-summary-panel">
                         <div class="panel-heading group-summary-panel-heading">
                             <h4>
@@ -143,11 +142,11 @@
                                 <li>{{controller}}</li>
                                 <li>
                                     <i class="fa fa-user" style="margin-right: 10px;"></i>People <span
-                                        class="label label-info pull-right">{{getUserCount(resourcePermission)}}</span>
+                                        class="label label-info pull-right">{{resourcePermission.resource.properties.userCount || 0}}</span>
                                 </li>
                                 <li>
                                     <i class="fa fa-hdd-o" style="margin-right: 10px;"></i>Devices<span
-                                        class="label label-success pull-right">{{getDeviceCount(resourcePermission)}}</span>
+                                        class="label label-success pull-right">{{resourcePermission.resource.properties.deviceCount || 0}}</span>
                                 </li>
                             </ul>
                         </div>
