--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -57,6 +57,11 @@
     .channel_icon-grid-view {
       cursor:pointer;
     }
+
+    .smart-device-panel {
+
+    }
+
     .thumbnail { height: 280px !important; }
     .btn-droppable { width: 180px; height: 30px; padding-left: 4px; }
     .btn-draggable { width: 160px; }
@@ -94,8 +99,7 @@
                     tooltip-popup-delay="5" >
                   <span class="label label-default">{{g.uuid}}</span>
                 </li>
-                <li class="list-group-item" tooltip="Token" tooltip-placement="right"
-                    tooltip-popup-delay="5">
+                <li class="list-group-item" tooltip="Token" tooltip-placement="right" tooltip-popup-delay="5">
                     <span class="label label-default">{{g.token}}</span>
                 </li>
                 <li class="list-group-item list-group-item-default" tooltip="Online" tooltip-placement="right"
@@ -126,8 +130,11 @@
 
     </div>
 </div>
+<h2 style="margin-left: 20px; margin-bottom: 30px;"><i class='fa fa-hdd-o'>&nbsp;&nbsp;</i>Smart Devices</h2>
 <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
+    </div>
 </div>
 <div class="divScroll">
     <div class="scrollWrapper">
